# lasrobot_ws

./: .gitignore  .gitignore~  README  README.md  README.md~  README~  descartes_imulation.bash~  descartes_simulation.bash  descartes_simulation.bash~  ikfast.txt  ikfast_more.txt  kdl.txt  kdl_more.txt  kdl_more_output.txt  new_urdf.urdf~  rviz.bash  simulation.bash~  source_ws.bash  trajectory.csv
plots/: bag_to_csv.py  test.py  (+15 more)
src/descartes_tutorials/: CMakeLists.txt  CMakeLists.txt~
src/descartes_tutorials/Scenarios/Meshes/: WorkObject_Paper.stl  WorkObject_Paper_CollisionObject.stl  WorkObject_test.stl  WorkObject_test2.stl  WorkObject_test3.stl  long_tube_on_plate.stl  table_leg.stl  testcase_rechtehoek.stl  tube_on_plate.stl
src/descartes_tutorials/Scenarios/Meshes/square_angle/: square_angle.FCStd1  square_angle.stl
src/descartes_tutorials/Scenarios/Simulaties_Scriptie/L-profile/: l-profile.stl
src/descartes_tutorials/Scenarios/Simulaties_Scriptie/Python_Scrips/: plotAngleErrorsX.py
src/descartes_tutorials/Scenarios/Simulaties_Scriptie/TestcaseRobberechts/: TR_Data_noCost_IKfast.ods
src/descartes_tutorials/Scenarios/Simulaties_Thesis/GlitchBehaviour/: tube_on_plate_alt.stl
src/descartes_tutorials/Scenarios/Simulaties_Thesis/Python_Scrips/: plotAngles_noCost.py
src/descartes_tutorials/Scenarios/Simulaties_Thesis/TestcaseRB/: TR_Data_Cost_IKfast.ods
src/descartes_tutorials/Scenarios/Simulaties_Thesis/TestcaseRobberechts/: testcaseRobberechts.stl
src/descartes_tutorials/Scenarios/Simulaties_Thesis/Videos/: IterativeTolerances.mkv  L_Cost_IKFast.mkv
src/descartes_tutorials/Scenarios/Simulaties_Thesis/tube_on_plate/: TOP_Data_Cost_IKfast.ods
src/descartes_tutorials/Scenarios/Simulations_Thesis/: README
src/descartes_tutorials/Scenarios/Simulations_Thesis/Python_Scrips/: plotAngleErrorsY.py  plotAngles_Cost.py
src/descartes_tutorials/Scenarios/trajectories/: trajectory.bag
src/descartes_tutorials/include/descartes_tutorials/: trajvis.cpp~  trajvis.h  utilities.h
src/descartes_tutorials/launch/: robot.launch  robot_kr120.launch
src/descartes_tutorials/src/: benchmark.cpp  functions.cpp~  path_from_file.cpp~  robot.cpp  robot.cpp~  robot_kr120.cpp  robot_ori.cpp~  test_bits.cpp  trajvis.cpp  tutorial1.cpp  tutorial1.cpp~  utilities.cpp
(+278 files in other folders)
